// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapUIRenderer prefills interactive inputs with existing state 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#848c96",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoFocus={false}
            editable={true}
            id="input"
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 24,
                "letterSpacing": 0,
                "opacity": 1,
                "paddingVertical": 0,
              }
            }
            testID="input"
            value="bar"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer re-renders when the interface changes 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#848c96",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoFocus={false}
            editable={true}
            id="input"
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 24,
                "letterSpacing": 0,
                "opacity": 1,
                "paddingVertical": 0,
              }
            }
            testID="input"
            value=""
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#848c96",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoFocus={false}
            editable={true}
            id="input2"
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 24,
                "letterSpacing": 0,
                "opacity": 1,
                "paddingVertical": 0,
              }
            }
            testID="input"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
  <View
    data-renders={2}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer re-syncs state when the interface changes 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#848c96",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoFocus={false}
            editable={true}
            id="input"
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 24,
                "letterSpacing": 0,
                "opacity": 1,
                "paddingVertical": 0,
              }
            }
            testID="input"
            value="bar"
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#848c96",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoFocus={false}
            editable={true}
            id="input2"
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 24,
                "letterSpacing": 0,
                "opacity": 1,
                "paddingVertical": 0,
              }
            }
            testID="input"
            value="foo"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    data-renders={2}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer renders basic UI 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityRole="text"
        fontWeight="normal"
        style={
          {
            "color": "inherit",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        textAlign="left"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "inherit",
              "fontFamily": "EuclidCircularB-Regular",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Hello world!
        </Text>
      </Text>
    </View>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer renders footers 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityRole="text"
        fontWeight="normal"
        style={
          {
            "color": "inherit",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        textAlign="left"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "inherit",
              "fontFamily": "EuclidCircularB-Regular",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Hello world!
        </Text>
      </Text>
    </View>
    <View
      flexDirection="row"
      gap={4}
      padding={4}
      style={
        {
          "bottom": 0,
          "justifyContent": "space-evenly",
          "paddingVertical": 20,
          "position": "absolute",
          "width": "100%",
        }
      }
      width="100%"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "transparent",
            "borderColor": "#0376c9",
            "borderRadius": 24,
            "borderWidth": 1,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Medium",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Cancel
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#0376c9",
            "borderRadius": 24,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
        textVariant="sBodyMDMedium"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 50,
                "borderWidth": 0,
                "height": 24,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 24,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#141618",
                  "fontFamily": "EuclidCircularB-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              m
            </Text>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "EuclidCircularB-Medium",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "inherit",
                  "fontFamily": "EuclidCircularB-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Foo
            </Text>
          </Text>
        </View>
      </TouchableOpacity>
    </View>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer renders loading state 1`] = `
<ActivityIndicator
  color="#1292B4"
  size="large"
/>
`;

exports[`SnapUIRenderer supports interactive inputs 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#848c96",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoFocus={false}
            editable={true}
            id="input"
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 24,
                "letterSpacing": 0,
                "opacity": 1,
                "paddingVertical": 0,
              }
            }
            testID="input"
            value="a"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer supports the onCancel prop 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityRole="text"
        fontWeight="normal"
        style={
          {
            "color": "inherit",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        textAlign="left"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "inherit",
              "fontFamily": "EuclidCircularB-Regular",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Hello world!
        </Text>
      </Text>
    </View>
    <View
      flexDirection="row"
      gap={4}
      padding={4}
      style={
        {
          "bottom": 0,
          "justifyContent": "space-evenly",
          "paddingVertical": 20,
          "position": "absolute",
          "width": "100%",
        }
      }
      width="100%"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        loading={false}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "transparent",
            "borderColor": "#0376c9",
            "borderRadius": 24,
            "borderWidth": 1,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Medium",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Cancel
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#0376c9",
            "borderRadius": 24,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
        textVariant="sBodyMDMedium"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 50,
                "borderWidth": 0,
                "height": 24,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 24,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#141618",
                  "fontFamily": "EuclidCircularB-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              m
            </Text>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "EuclidCircularB-Medium",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "inherit",
                  "fontFamily": "EuclidCircularB-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Foo
            </Text>
          </Text>
        </View>
      </TouchableOpacity>
    </View>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;
